# inspect-db

./: Dockerfile  README.md  demo.tape  examples.ipynb  pyproject.toml
.github/workflows/: ci.yml
src/inspect_db/: __init__.py  cli.py  common.py  db.py  ingest.py  models.py  util.py
tests/: conftest.py  test_cli.py  test_ingest.py  test_inspect_conversion.py  test_raw_db.py
tests/sample_logs/: 2025-04-10T09-09-00+01-00_commonsense-qa_BvqVogcx7wZWDpvRYnci6b.eval
